--- a/nginx.conf
+++ b/nginx.conf
@@ -3,7 +3,7 @@ server {
     listen [::]:80;
     server_name autohausk.sakaits.com;
 
-    client_max_body_size 20M;
+    client_max_body_size 50M;
 
     # Frontend
     location / {
@@ -26,6 +26,11 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Timeouts für größere Uploads
+        proxy_connect_timeout 120s;
+        proxy_send_timeout 120s;
+        proxy_read_timeout 120s;
     }
 
     # Uploads
